Fix text alignment in services cards - make all cards start from the same position

--- a/interior-design/components/styles/services.module.scss
+++ b/interior-design/components/styles/services.module.scss
@@ -47,7 +47,7 @@
 .card_box {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 25vw;
   margin-left: 40px;
   padding: 2vh;
